--- a/styles/components/_main.scss
+++ b/styles/components/_main.scss
@@ -8,4 +8,5 @@
 @import "./relatedBlogs";
 @import "./featuredProperties";
 @import "./categorySpecificBlog";
-@import "./bottomComponent.scss"
+@import "./bottomComponent.scss";
+@import "./detailProperty.scss"
