--- a/styles/components/_relatedBlogs.scss
+++ b/styles/components/_relatedBlogs.scss
@@ -10,7 +10,7 @@
   .imageContainer {
     width: 120px;
     height: 90px;
-    background: #d9d9d9;
+    background: transparent;
     border-radius: 6px;
 
     .relatedBlogsImage {
