homePage Initial Push Before Merger

--- a/styles/components/_main.scss
+++ b/styles/components/_main.scss
@@ -9,4 +9,5 @@
 @import "./featuredProperties";
 @import "./categorySpecificBlog";
 @import "./bottomComponent.scss";
-@import "./detailProperty.scss"
+@import "./detailProperty.scss";
+@import "./outThoughts";
