--- a/styles/components/_outThoughts.scss
+++ b/styles/components/_outThoughts.scss
@@ -1,4 +1,4 @@
-.homeLoan {
+.ourThoughts {
   display: flex;
   flex-direction: row;
   align-items: flex-start;
@@ -20,13 +20,13 @@
     display: flex;
     justify-content: center;
 
-    .homeLoanImage {
+    .ourThoughtsImage {
       width: auto;
       height: 100%;
       @media only screen and (min-width: 1024px) {
-          width: unset;
-          height: unset;
-        }
+        width: unset;
+        height: unset;
+      }
     }
   }
   .blogContents {
@@ -91,7 +91,7 @@
 }
 
 @media only screen and (min-width: 1024px) {
-  .homeLoan {
+  .ourThoughts {
     width: 100%;
     height: 107.33px;
 
