--- a/styles/components/_main.scss
+++ b/styles/components/_main.scss
@@ -5,6 +5,7 @@
 @import "./MainProperty";
 @import "./homeLoan";
 @import "./lawAndPolicy";
+@import "./lifeStyle";
 @import "./relatedBlogs";
 @import "./featuredProperties";
 @import "./categorySpecificBlog";
