--- a/styles/components/_lifeStyle.scss
+++ b/styles/components/_lifeStyle.scss
@@ -1,11 +1,11 @@
-.lifeStyle {
+.lifestyle {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
   align-items: center;
   gap: 10px;
-  width: 410.67px;
-  height: 310px;
+  width: 100%;
+  height: 100%;
   background: linear-gradient(
     0.14deg,
     rgba(17, 16, 16, 0.7) 12.94%,
@@ -17,11 +17,12 @@
   padding: 0px;
   transition: 0.4s all;
   position: relative;
+  overflow: hidden;
 
   .thumbnail {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: flex-start;
+    align-items: flex-start;
     width: 100%;
     height: 100%;
     z-index: 1;
@@ -31,6 +32,12 @@
       rgba(17, 16, 16, 0.7) 12.94%,
       rgba(0, 0, 0, 0) 67.86%
     );
+    overflow: hidden;
+    
+    .image{
+      height: 100%;
+      width: auto;
+    }
 
     .blogCardBackground {
       width: 100%;
@@ -121,6 +128,7 @@
         -webkit-box-orient: vertical;
         margin: 0px;
         padding: 0px;
+        height: 40px;
       }
     }
     .blogBy {
@@ -147,13 +155,13 @@
     }
   }
 }
-.lifeStyle:hover {
+.homeBlogTypeSmall:hover {
   transform: scale(0.9);
 }
 
-@media only screen and (min-width: 768px) {
-  .lifeStyle {
-    width: 316.25px;
-    height: 247.5px;
+@media only screen and (min-width: 1024px) {
+  .homeBlogTypeSmall {
+    width: 100%;
+    height: 100%;
   }
 }
