--- a/styles/components/_marketNewsTypeMain.scss
+++ b/styles/components/_marketNewsTypeMain.scss
@@ -6,7 +6,7 @@
   padding: 0px;
   gap: 16px;
   width: 100%;
-  min-height: 388px;
+  // min-height: 388px;
   height: fit-content;
   transition: 0.4s all;
 
@@ -17,11 +17,14 @@
     border-radius: 6px;
     width: 100%;
     height: 180px;
-    border: solid 1px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     .image{
       height: auto;
       width: 100%;
+      border-radius: inherit;
     }
   }
 
@@ -31,7 +34,6 @@
     justify-content: center;
     align-items: flex-start;
     gap: 10px;
-    border: solid 1px;
 
     .blogCategoryTitle {
       display: flex;
