--- a/styles/pages/_homePage.scss
+++ b/styles/pages/_homePage.scss
@@ -143,7 +143,6 @@
           gap: 10px;
           overflow-x: scroll;
           overflow-y: hidden;
-          border: solid 1px;
 
           .blogPreviewDiv::-webkit-scrollbar-track {
             /* -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);  */
@@ -169,7 +168,6 @@
             width: 250px !important;
             min-width: none;
             min-height: 100%;
-            border: solid 1px;
           }
 
           .smallComponentDiv {
@@ -205,7 +203,6 @@
           width: 100%;
           height: fit-content;
           padding-right: 15px;
-          border: solid 1px;
 
           .titleDiv {
             display: flex;
@@ -260,7 +257,6 @@
             height: fit-content;
             flex: none;
             align-self: stretch;
-            border: solid 1px;
           }
 
           .marketBigComponent {
@@ -288,7 +284,6 @@
             // height: fit-content;
             flex: none;
             align-self: stretch;
-            border: solid 1px;
 
             .marketSmallComponent {
               display: flex;
@@ -461,11 +456,9 @@
             height: 286px;
             overflow-x: scroll;
             overflow-y: hidden;
-            border: solid 1px;
 
 
             .lifeStyleCard {
-              border: solid 1px;
               display: flex;
               flex-direction: column;
               justify-content: flex-end;
@@ -507,7 +500,6 @@
             position: relative;
             width: 100%;
             height: 354px;
-            border: solid 1px;
 
 
             .homeLoanTitleDiv {
@@ -562,12 +554,10 @@
               gap: 24px;
               width: 100%;
               height: 318px;
-              border: solid 1px;
               align-self: stretch;
               flex-grow: 0;
 
               .homeLoanCard {
-                border: solid 1px;
                 display: flex;
                 flex-direction: row;
                 justify-content: center;
@@ -595,7 +585,6 @@
             position: relative;
             width: 100%;
             height: 354px;
-            border: solid 1px;
 
 
             .ourThoughtsTitleDiv {
@@ -652,7 +641,6 @@
               height: 318px;
               flex: none;
               align-self: stretch;
-              border: solid 1px;
 
 
               .ourThoughtsCard {
@@ -665,7 +653,6 @@
                 width: 100%;
                 height: 90px;
                 flex: none;
-                border: solid 1px;
                 align-self: stretch;
                 flex-grow: 0;
 
@@ -695,7 +682,6 @@
             position: relative;
             width: 100%;
             height: 354px;
-            border: solid 1px;
 
 
             .lawPolicyTitleDiv {
@@ -752,7 +738,6 @@
               height: 318px;
               flex: none;
               align-self: stretch;
-              border: solid 1px;
 
 
               .lawPolicyCard {
@@ -767,7 +752,6 @@
                 flex: none;
                 order: 0;
                 align-self: stretch;
-                border: solid 1px;
               }
             }
           }
@@ -2395,8 +2379,7 @@
               padding: 0px;
               gap: calc(24 * 100% / 1277);
               width: 100%;
-              height: fit-content;
-              min-height: 310px;
+              height: 310px;
 
               overflow: hidden;
 
