--- a/styles/pages/_homePage.scss
+++ b/styles/pages/_homePage.scss
@@ -65,7 +65,7 @@
       max-width: 500px;
       display: flex;
       flex-direction: column;
-      // padding-top: 8px;
+      border: none;
       background-color: #ffffff;
       position: relative;
 
@@ -738,6 +738,7 @@
               height: 318px;
               flex: none;
               align-self: stretch;
+              overflow: hidden;
 
 
               .lawPolicyCard {
@@ -1011,7 +1012,6 @@
         height: fit-content;
         width: 100%;
         max-width: 800px;
-        // 
         display: flex;
         flex-direction: column;
         // padding-top: 8px;
@@ -1104,25 +1104,20 @@
               width: fit-content;
               min-width: 100%;
               min-height: 500px;
-
             }
 
             .smallComponentDiv {
               display: flex;
               flex-direction: row;
-              gap: 5px;
-              min-height: 247.5px;
+              gap: 6px;
               height: 250px;
-              width: 100%;
-              // width: fit-content;
-
+              width: fit-content;
+              overflow-x: scroll;
+              overflow-y: hidden;
+  
               .smallComponent {
                 height: 250px;
-                width: 32.9%;
-                // max-width: ;
-                min-width: none;
-
-                overflow: hidden;
+                width: 250px;
               }
             }
           }
@@ -2297,7 +2292,7 @@
               width: 100%;
               min-height: 334px;
               height: fit-content;
-              overflow-x: scroll;
+              overflow-x: hidden;
               overflow-y: hidden;
               flex: none;
               align-self: stretch;
