--- a/styles/components/_marketNewsTypeMain.scss
+++ b/styles/components/_marketNewsTypeMain.scss
@@ -59,7 +59,7 @@
       p {
         margin: 0px;
         padding: 0px;
-        font-family: "Product Sans", sans-serif;
+        font-family: "Ek Mukta";
         font-style: normal;
         font-weight: 400;
         font-size: 10px;
@@ -125,7 +125,7 @@
 
       .author,
       .posted {
-        font-family: "Product Sans", sans-serif;
+        font-family: "Ek Mukta";
         font-style: normal;
         font-weight: 400;
         font-size: 14px;
