--- a/styles/components/_bottomComponent.scss
+++ b/styles/components/_bottomComponent.scss
@@ -28,7 +28,7 @@
         .headingDiv {
             width: 100%;
             height: 44px;
-            font-family: 'Product Sans';
+            font-family: 'Ek Mukta';
             font-style: normal;
             font-weight: 700;
             font-size: 16px;
@@ -41,7 +41,7 @@
         }
 
         .timeDiv {
-            font-family: 'Product Sans';
+            font-family: 'Ek Mukta';
             font-style: normal;
             font-weight: 400;
             font-size: 14px;
