--- a/styles/components/_homeBlogTypeMain.scss
+++ b/styles/components/_homeBlogTypeMain.scss
@@ -87,7 +87,7 @@
         flex-direction: row;
         justify-content: center;
         align-items: center;
-        font-family: "Product Sans", sans-serif;
+        font-family: "Ek Mukta";
         font-style: normal;
         font-weight: 400;
         font-size: 10px;
@@ -109,7 +109,7 @@
       align-items: flex-start;
 
       p {
-        font-family: "Product Sans", sans-serif;
+        font-family: "Ek Mukta";
         font-style: normal;
         font-weight: 700;
         font-size: 16px;
@@ -134,7 +134,7 @@
 
       .author,
       .posted {
-        font-family: "Product Sans", sans-serif;
+        font-family: "Ek Mukta";
         font-style: normal;
         font-weight: 400;
         font-size: 14px;
