--- a/styles/components/_homeBlogTypeSmall.scss
+++ b/styles/components/_homeBlogTypeSmall.scss
@@ -85,7 +85,7 @@
         flex-direction: row;
         justify-content: center;
         align-items: center;
-        font-family: "Product Sans", sans-serif;
+        font-family: "Ek Mukta";
         font-style: normal;
         font-weight: 400;
         font-size: 10px;
@@ -107,7 +107,7 @@
       align-items: flex-start;
 
       p {
-        font-family: "Product Sans", sans-serif;
+        font-family: "Ek Mukta";
         font-style: normal;
         font-weight: 700;
         font-size: 16px;
@@ -133,7 +133,7 @@
 
       .author,
       .posted {
-        font-family: "Product Sans", sans-serif;
+        font-family: "Ek Mukta";
         font-style: normal;
         font-weight: 400;
         font-size: 14px;
