--- a/styles/components/_lawAndPolicy.scss
+++ b/styles/components/_lawAndPolicy.scss
@@ -16,7 +16,7 @@
   .lawPolicyTitle {
     width: fit-content;
     height: 28px;
-    font-family: "Product Sans", sans-serif;
+    font-family: "Ek Mukta";
     font-style: normal;
     font-weight: 700;
     font-size: 24px;
@@ -30,7 +30,7 @@
   .lawPolicyViewAllButton {
     width: fit-content;
     height: 22px;
-    font-family: "Product Sans", sans-serif;
+    font-family: "Ek Mukta";
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
@@ -101,7 +101,7 @@
         p {
           margin: 0px;
           padding: 0px;
-          font-family: "Product Sans", sans-serif;
+          font-family: "Ek Mukta";
           font-style: normal;
           font-weight: 400;
           font-size: 10px;
@@ -122,7 +122,7 @@
         p {
           margin: 0px;
           padding: 0px;
-          font-family: "Product Sans", sans-serif;
+          font-family: "Ek Mukta";
           font-style: normal;
           font-weight: 700;
           font-size: 16px;
@@ -170,7 +170,7 @@
     .lawPolicyTitle {
       width: fit-content;
       height: 28px;
-      font-family: "Product Sans", sans-serif;
+      font-family: "Ek Mukta";
       font-style: normal;
       font-weight: 700;
       font-size: 24px;
@@ -184,7 +184,7 @@
     .lawPolicyViewAllButton {
       width: fit-content;
       height: 22px;
-      font-family: "Product Sans", sans-serif;
+      font-family: "Ek Mukta";
       font-style: normal;
       font-weight: 400;
       font-size: 16px;
@@ -255,7 +255,7 @@
 
           .author,
           .posted {
-            font-family: "Product Sans", sans-serif;
+            font-family: "Ek Mukta";
             font-style: normal;
             font-weight: 400;
             font-size: 14px;
