--- a/styles/components/_lifeStyle.scss
+++ b/styles/components/_lifeStyle.scss
@@ -92,7 +92,7 @@
         flex-direction: row;
         justify-content: center;
         align-items: center;
-        font-family: "Product Sans", sans-serif;
+        font-family: "Ek Mukta";
         font-style: normal;
         font-weight: 400;
         font-size: 10px;
@@ -114,7 +114,7 @@
       align-items: flex-start;
 
       p {
-        font-family: "Product Sans", sans-serif;
+        font-family: "Ek Mukta";
         font-style: normal;
         font-weight: 700;
         font-size: 16px;
@@ -140,7 +140,7 @@
 
       .author,
       .posted {
-        font-family: "Product Sans", sans-serif;
+        font-family: "Ek Mukta";
         font-style: normal;
         font-weight: 400;
         font-size: 14px;
