--- a/styles/components/_marketNewsTypeSecondary.scss
+++ b/styles/components/_marketNewsTypeSecondary.scss
@@ -39,7 +39,7 @@
       p {
         margin: 0px;
         padding: 0px;
-        font-family: "Product Sans", sans-serif;
+        font-family: "Ek Mukta";
         font-style: normal;
         font-weight: 400;
         font-size: 10px;
@@ -57,7 +57,7 @@
         height: 46.5px;
         margin: 0px;
         padding-top: 2px;
-        font-family: "Product Sans", sans-serif;
+        font-family: "Ek Mukta";
         font-style: normal;
         font-weight: 700;
         font-size: 16px;
@@ -114,7 +114,7 @@
 
         .author,
         .posted {
-          font-family: "Product Sans", sans-serif;
+          font-family: "Ek Mukta";
           font-style: normal;
           font-weight: 400;
           font-size: 14px;
